--- a/src/scss/components/avatar/_base.scss
+++ b/src/scss/components/avatar/_base.scss
@@ -4,7 +4,7 @@
   display: inline-flex;
   position: relative;
 
-  // Children Components
+  // Children components
 
   .badge {
     box-shadow: 0 0 0 2px #fff;
