--- a/src/scss/components/avatar/_variables.scss
+++ b/src/scss/components/avatar/_variables.scss
@@ -1,4 +1,4 @@
-$avatar-bg: var(--color-grey);
+$avatar-bg: var(--color-bg-dker);
 $avatar-border-radius: var(--component-border-radius-base);
 
 $avatar-shapes: ("base", "rounded") !default;
