--- a/src/scss/components/button/_variables.scss
+++ b/src/scss/components/button/_variables.scss
@@ -18,4 +18,4 @@ $button-sizes: (
   )
 ) !default;
 
-$button-types: ("solid", "subtle", "ghost") !default;
+$button-types: ("solid", "subtle", "outline", "ghost") !default;
