--- a/src/scss/components/divider/_base.scss
+++ b/src/scss/components/divider/_base.scss
@@ -1,9 +1,18 @@
 .divider {
   align-items: center;
   box-sizing: border-box;
-  display: flex;
   position: relative;
   white-space: nowrap;
+}
+
+.divider-children {
+  display: inline-flex;
+}
+
+// Orientation
+
+[class*="divider-horizontal"] {
+  display: flex;
 
   &::after,
   &::before {
@@ -14,44 +23,45 @@
     top: 50%;
     width: 50%;
   }
+
+  &.divider-align-start {
+    justify-content: flex-start;
+
+    &::before {
+      flex-grow: 0;
+      width: 0%;
+    }
+  }
+
+  &.divider-align-center {
+    justify-content: center;
+  }
+
+  &.divider-align-end {
+    justify-content: flex-end;
+
+    &::after {
+      flex-grow: 0;
+      width: 0%;
+    }
+  }
 }
 
-.divider-children {
+[class*="divider-vertical"] {
+  border-left: $divider-border-width solid $divider-border-color;
   display: inline-flex;
-}
-
-// Alignments
-
-.divider-align-start {
-  justify-content: flex-start;
-
-  &::before {
-    flex-grow: 0;
-    width: 0%;
-  }
-}
-
-.divider-align-center {
-  justify-content: center;
-}
-
-.divider-align-end {
-  justify-content: flex-end;
-
-  &::after {
-    flex-grow: 0;
-    width: 0%;
-  }
+  height: 1em;
+  vertical-align: middle;
 }
 
 // Size
 
 @each $size, $props in $divider-sizes {
-  .divider-size-#{$size} {
+  .divider-horizontal-#{$size} {
 
     $gap      : map-get($props, "gap");
     $font-size: map-get($props, "font-size");
-    $margin-y : map-get($props, "margin-y");
+    $margin-y : map-get($props, "margin");
 
     @include map-props-mixin(
       map-get($component-font-sizing, $font-size));
@@ -61,5 +71,12 @@
 
     @include map-props-mixin(
       map-get($component-margin-y-sizing, $margin-y));
+  }
+
+  .divider-vertical-#{$size} {
+    $margin-x: map-get($props, "margin");
+
+    @include map-props-mixin(
+      map-get($component-margin-x-sizing, $margin-x));
   }
 }
