--- a/src/scss/components/divider/_variables.scss
+++ b/src/scss/components/divider/_variables.scss
@@ -2,14 +2,16 @@ $divider-border-color: var(--color-border) !default;
 $divider-border-width: var(--component-border-width-base) !default;
 
 $divider-sizes: (
-  "sm": (
-    "font-size": "xs",   "gap": "8",  "margin-y": "8"
+  "4": (
+    "font-size": "sm", "gap": "12",  "margin": "4"
   ),
-  "base": (
-    "font-size": "sm",   "gap": "12", "margin-y": "16"
+  "8": (
+    "font-size": "sm", "gap": "12", "margin": "8"
   ),
-  "lg": (
-    "font-size": "base", "gap": "16", "margin-y": "24"
+  "12": (
+    "font-size": "sm", "gap": "12", "margin": "12",
+  ),
+  "16": (
+    "font-size": "sm", "gap": "12", "margin": "16",
   )
 ) !default;
-
