--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -1,6 +1,6 @@
 @import "layout";
 
-// @import "alert";
+@import "alert";
 // @import "article";
 @import "avatar";
 @import "badge";
@@ -8,6 +8,8 @@
 @import "close";
 @import "dot";
 @import "divider";
+@import "icon";
+@import "menu";
 // @import "form";
 // @import "form-control";
 // @import "input-group";
@@ -15,3 +17,4 @@
 // @import "nav";
 // @import "navbar";
 @import "space";
+@import "typography";
