--- a/src/scss/root/index.scss
+++ b/src/scss/root/index.scss
@@ -3,6 +3,6 @@
 @import "breakpoints";
 @import "brightness";
 @import "colors";
-@import "icons";
+@import "sizing";
 @import "spacing";
 @import "typography";
