--- a/src/scss/variables/index.scss
+++ b/src/scss/variables/index.scss
@@ -3,7 +3,8 @@
 @import "breakpoints";
 @import "brightness";
 @import "colors";
-@import "components";
-@import "icons";
+@import "sizing";
 @import "spacing";
 @import "typography";
+
+@import "components";
