--- a/src/scss/components/badge/_mixins.scss
+++ b/src/scss/components/badge/_mixins.scss
@@ -1,7 +1,9 @@
 @mixin badge-style-mixin($color, $type) {
   @if ($type == 'solid') {
     @include badge-solid-mixin($color);
-  } @else if ($type == 'subtle') {
+  }
+
+  @if ($type == 'subtle') {
     @include badge-subtle-mixin($color);
   }
 }
