--- a/src/scss/components/close/_base.scss
+++ b/src/scss/components/close/_base.scss
@@ -1,31 +1,14 @@
 .close {
-  background: none;
-  border: 0;
   box-sizing: border-box;
-  color: $close-color;
+  cursor: pointer;
   display: inline-flex;
-  outline: none;
   padding: 0;
-  transition: filter $close-transition-duration;
 
-  &:hover {
-    @include close-hover-mixin;
-
-    cursor: pointer;
-  }
-
-  svg {
-    height: 100%;
-  }
-}
-
-// Size
-
-@each $name, $props in $close-sizes {
-  $size: map-get($props, "size");
-
-  .close-size-#{$name} {
-    @include map-props-mixin(
-      map-get($component-height-sizing, $size));
+  @at-root {
+    button#{&} {
+      background: none;
+      border: 0;
+      outline: none;
+    }
   }
 }
