--- a/src/scss/typography/_text.scss
+++ b/src/scss/typography/_text.scss
@@ -1,16 +1,14 @@
-a {
-  color: var(--color-link);
-  text-decoration: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0;
+}
 
-  &:hover,
-  &:focus {
-    color: var(--color-link-hover);
-    cursor: pointer;
-  }
-
-  &.active {
-    color: var(--color-link-active);
-  }
+p {
+  margin-bottom: 0;
 }
 
 b,
@@ -18,8 +16,17 @@ strong {
   font-weight: bold;
 }
 
-p {
-  color: var(--color-body);
-  line-height: var(--body-line-height);
-  margin-bottom: 0;
+a {
+  color: var(--color-link);
+  cursor: pointer;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    color: var(--color-link-hover);
+  }
+
+  &:active {
+    color: var(--color-link-active);
+  }
 }
