--- a/src/scss/variables/_components.scss
+++ b/src/scss/variables/_components.scss
@@ -1,27 +1,32 @@
-
-// Colors
+/* Colors */
 
 $component-colors: (
-  "grey",
   "primary",
+  "secondary",
   "accent",
   "success",
   "info",
   "warning",
-  "error"
+  "error",
+  "light",
+  "dark"
 ) !default;
 
-
-// Positions
+/* Positions */
 
 $component-positions: (
-  "top-left"   , "top-center"   , "top-right",
-  "center-left", "center-center", "center-right",
-  "bottom-left", "bottom-center", "bottom-right"
+  "top-left"   ,
+  "top-center"   ,
+  "top-right",
+  "center-left",
+  "center-center",
+  "center-right",
+  "bottom-left",
+  "bottom-center",
+  "bottom-right"
 ) !default;
 
-
-// Shapes
+/* Shapes */
 
 $component-border-radius-base: 3px;
 $component-border-radius-rounded: 50rem;
@@ -36,43 +41,18 @@ $component-shapes: (
 ) !default;
 
 
-// Sizing
+/**
+ *
+ * Sizing
+ *
+ */
 
-// -- Base Component
-
-$component-size-base: 1rem;
-
-$component-size-8  : $component-size-base * .5;
-$component-size-12 : $component-size-base * .75;
-$component-size-16 : $component-size-base;
-$component-size-20 : $component-size-base * 1.25;
-$component-size-24 : $component-size-base * 1.5;
-$component-size-32 : $component-size-base * 2;
-$component-size-36 : $component-size-base * 2.25;
-$component-size-40 : $component-size-base * 2.5;
-$component-size-48 : $component-size-base * 3;
-$component-size-56 : $component-size-base * 3.5;
-$component-size-64 : $component-size-base * 4;
-
-$component-sizes:
-(
-  '8' : $component-size-8,
-  '12': $component-size-12,
-  '16': $component-size-16,
-  '20': $component-size-20,
-  '24': $component-size-24,
-  '32': $component-size-32,
-  '40': $component-size-40,
-  '48': $component-size-48,
-  '56': $component-size-56,
-  '64': $component-size-64
-);
-
-$component-size-sizing     : ();
 $component-height-sizing   : ();
 $component-min-width-sizing: ();
+$component-size-sizing     : ();
+$component-width-sizing    : ();
 
-@each $name, $value in $component-sizes {
+@each $name, $value in $sizes {
   $component-height-sizing: map-merge(
     $component-height-sizing, (
       "#{$name}": ("height": $value)
@@ -90,68 +70,34 @@ $component-min-width-sizing: ();
       "#{$name}": ("height": $value, "width": $value)
     )
   );
+
+  $component-width-sizing: map-merge(
+    $component-width-sizing, (
+      "#{$name}": ("width": $value)
+    )
+  );
 }
 
-// -- Component Image
+/**
+ *
+ * Spacing
+ *
+ */
 
-// $component-image-size-base: 32px;
+$component-gap-sizing         : ();
 
-// $component-image-size-xs: 16px;
-// $component-image-size-sm: 20px;
+$component-margin-sizing      : ();
+$component-margin-x-sizing    : ();
+$component-margin-y-sizing    : ();
 
-// $component-image-size-sizing: (
-//   "base": (
-//     "height": $component-image-size-base,
-//     "width": $component-image-size-base,
-//   ),
-//   "xs": (
-//     "height": $component-image-size-xs,
-//     "width": $component-image-size-xs,
-//   ),
-//   "sm": (
-//     "height": $component-image-size-sm,
-//     "width": $component-image-size-sm,
-//   )
-// ) !default;
+$component-padding-sizing     : ();
+$component-padding-x-sizing   : ();
+$component-padding-y-sizing   : ();
 
+$component-padding-left-sizing: ();
+$component-padding-right-sizing: ();
 
-// Spacing
-
-// -- Base
-
-$component-space-base: 1rem;
-
-$component-space-4  : $component-space-base * .25;
-$component-space-8  : $component-space-base * .5;
-$component-space-12 : $component-space-base * .75;
-$component-space-16 : $component-space-base;
-$component-space-20 : $component-space-base * 1.25;
-$component-space-24 : $component-space-base * 1.5;
-$component-space-32 : $component-space-base * 2;
-
-$component-spaces:
-(
-  '4' : $component-space-4,
-  '8' : $component-space-8,
-  '12': $component-space-12,
-  '16': $component-space-16,
-  '20': $component-space-20,
-  '24': $component-space-24,
-  '32': $component-space-32
-);
-
-$component-gap-sizing      : ();
-
-$component-margin-sizing  : ();
-$component-margin-x-sizing: ();
-$component-margin-y-sizing: ();
-
-
-$component-padding-sizing  : ();
-$component-padding-x-sizing: ();
-$component-padding-y-sizing: ();
-
-@each $name, $value in $component-spaces {
+@each $name, $value in $spaces {
   $component-gap-sizing: map-merge(
     $component-gap-sizing, (
       "#{$name}": ("gap": $value)
@@ -193,91 +139,42 @@ $component-padding-y-sizing: ();
       "#{$name}": ("padding-top": $value, "padding-bottom": $value)
     )
   );
+
+  $component-padding-left-sizing: map-merge(
+    $component-padding-left-sizing, (
+      "#{$name}": ("padding-left": $value)
+    )
+  );
+
+  $component-padding-right-sizing: map-merge(
+    $component-padding-right-sizing, (
+      "#{$name}": ("padding-right": $value)
+    )
+  );
 }
 
-// Types
+/* Types */
 
 $component-types: (
   "solid",
   "subtle",
+  "outline",
   "ghost"
 ) !default;
 
-// Typography
-
-// -- Font size
-
-$component-font-scale: 1.2; // Minor Third
-$component-font-size-base: 1rem;
-
-$component-font-size-xxxs: $component-font-size-base / ($component-font-scale * $component-font-scale * $component-font-scale * $component-font-scale);
-
-$component-font-size-xxs: $component-font-size-base / ($component-font-scale * $component-font-scale * $component-font-scale);
-
-$component-font-size-xs: $component-font-size-base / ($component-font-scale * $component-font-scale);
-
-$component-font-size-sm: $component-font-size-base / ($component-font-scale);
-
-$component-font-size-md: $component-font-size-base * ($component-font-scale);
+/* Typography */
 
 $component-font-sizing: (
-  "base": (
-    "font-size": $component-font-size-base,
-  ),
-  "xxxs": (
-    "font-size": $component-font-size-xxxs,
-  ),
   "xxs": (
-    "font-size": $component-font-size-xxs,
+    "font-size": $font-size-xxs,
   ),
   "xs": (
-    "font-size": $component-font-size-xs,
+    "font-size": $font-size-xs,
   ),
   "sm": (
-    "font-size": $component-font-size-sm,
+    "font-size": $font-size-sm,
   ),
-  "md": (
-    "font-size": $component-font-size-md,
+  "base": (
+    "font-size": $font-size-base
   )
 ) !default;
-
-// -- Font spacing
-
-// $component-font-space-base: .675em;
-
-// $component-font-space-xs: $component-font-space-base * 0.375 !default;
-// $component-font-space-sm: $component-font-space-base * 0.5 !default;
-// $component-font-space-md: $component-font-space-base * 1.125 !default;
-
-$component-font-space-sizing: (
-  // "base": (
-  //   "margin-top": $component-font-space-base,
-  // ),
-  // "xs": (
-  //   "margin-top": $component-font-space-xs,
-  // ),
-  // "sm": (
-  //   "margin-top": $component-font-space-sm,
-  // ),
-  // "md": (
-  //   "margin-top": $component-font-space-md,
-  // )
-) !default;
-
-
-// $component-margin-sizing: (
-//   "base": (
-//     "margin": $component-space-base,
-//   ),
-//   "xs": (
-//     "margin": $component-space-xs,
-//   ),
-//   "sm": (
-//     "margin": $component-space-sm,
-//   ),
-//   "md": (
-//     "margin": $component-space-md,
-//   )
-// ) !default;
-
-
