update on components badge and dot

--- a/src/scss/components/badge/_base.scss
+++ b/src/scss/components/badge/_base.scss
@@ -20,9 +20,9 @@
 
 // Position
 
-@each $position in $component-positions {
-  .badge-position-#{$position} {
-    @include component-position-mixin($position);
+@each $placement in $badge-placements {
+  .badge-placement-#{$placement} {
+    @include component-placement-mixin($placement);
   }
 }
 
