--- a/src/scss/components/dot/_variables.scss
+++ b/src/scss/components/dot/_variables.scss
@@ -1,3 +1,7 @@
+$dot-placements: (
+  'top-left', 'top-right', 'bottom-left', 'bottom-right'
+) !default;
+
 $dot-shapes: ('rounded') !default;
 
 $dot-sizes: (
